# TallerDeProgramacion1

./: README.md
rfc/: .gitignore  Cargo.toml
rfc/src/: channel_list.rs  channels.rs  client_parser.rs  cliente.rs  clientecpy.rs  comunicator.rs  config_file  config_file.rs  data_base.rs  data_channels  data_file  data_user_file_tcp.rs  datauser.rs  file_container.rs  file_map.rs  joined_channels  lib.rs  main.rs  mylines.rs  mylines2.rs  name_ip_map.rs  parser.rs  prueba  send_file.rs  server.rs  test_send_file  test_send_file.txt  ui.rs
rfc/src/answers/: ban_answer.rs  connected_answer.rs  dcc_close_answer.rs  file_info_answer.rs  file_request_answer.rs  invite_answer.rs  join_answer.rs  kick_answer.rs  list_answer.rs  mod.rs  mode_answer.rs  names_answer.rs  nick_answer.rs  p2p_answer.rs  part_answer.rs  privmsg_answer.rs  quit_answer.rs  server_answer.rs  start_dcc_answer.rs  topic_answer.rs  who_answer.rs  who_is_answer.rs
rfc/src/messages/: away.rs  connect.rs  invite.rs  join.rs  kick.rs  list.rs  mod.rs  mode.rs  names.rs  nick.rs  oper.rs  part.rs  pass.rs  private_message.rs  quit.rs  send.rs  server_msg.rs  server_quit.rs  server_quit_request.rs  shut.rs  topic.rs  user.rs  who.rs  whois.rs
rfc/src/ui_misc/: custom_chat_button.rs  dcc.glade  dcc_window.rs  dm_window.rs  join_channel_window.rs  login_window.rs  main_window.rs  mod.rs  object_ext.rs  private_handler.rs  registration_window.rs  style.css  ui.glade  ui.glade~
